# splines

./: .gitignore  CMakeLists.txt  README.MD  README.md  vis.py
spline_2d/: data_gen.cpp  main.cpp  run.bat  spline.cpp  spline.h  vis.py
spline_2d/src/: main.cpp  spline.cpp  spline.h  spline_2d.cpp
spline_2d/tools/: data_gen.cpp  tools.cpp  tools.h
tools/: data_gen.cpp  tools.cpp  tools.h  tools_2d.cpp  tools_2d.h
univariate_spline/: makefile  run.bat
univariate_spline/src/: main.cpp  univariate_spline.cpp  univariate_spline.h
